--- a/new.html
+++ b/new.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
-	<title>往后余生  我只要你</title>
+	<title>To：亲爱的王嘉悦</title>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jscex.min.js"></script>
 	<script type="text/javascript" src="js/jscex-parser.js"></script>
@@ -39,25 +39,29 @@
 			<div id="text" hidden>
 				<div id="code">
 					<font color="#FF0000">
-						<span class="say">一生有你的陪伴</span><br>
-						<span class="say"> </span><br>
+						<span class="say">遇见你，</span><br>
+						<span class="say">是我今生最大的幸运♥ </span><br>
 						<span class="say">便是最幸运的事</span><br>
-						<span class="say"> </span><br>
+						<span class="say"> 缘分是一个很奇妙的东西</span><br>
 						<span class="say">我要的不多</span><br>
-						<span class="say"> </span><br>
-						<span class="say">我只要你陪我一起走过剩下日子</span><br>
-						<span class="say"> </span><br>
-						<span class="say">我爱你</span><br>
-						<span class="say"> </span><br>
-						<span class="say">不是冲动而是真心喜欢</span><br>
-						<span class="say"> </span><br>
-						<span class="say">I love three things: the sun, the month and you.</span><br>
-						<span class="say"> </span><br>
+						<span class="say">突然有一天就降临在了咱俩身上 </span><br>
+						<span class="say">就像之前打喷嚏我会觉得我感冒了</span><br>
+						<span class="say">但现在我就觉得是你在想我，现在的状态刚刚好 </span><br>
+						<span class="say">但是这些我还不满足啊</span><br>
+						<span class="say">我还想，等以后我们见面了 </span><br>
+						<span class="say">想就这样牵着你手不放开，走过每一个春夏秋冬</span><br>
+						<span class="say">想每当你看剧时就一把抱住你，捏捏你的脸蛋</span><br>
+						<span class="say">想每天醒来的第一眼就看到睡得像头小猪的你</span><br>
+						<span class="say">想把你宠成小公主，做一个一直保护你的骑士</span><br>
+						<span class="say">亲爱的小王，我真的很喜欢你！</span><br>
+						<span class="say">想和你有很长的未来 </span><br>
+						<span class="say">我亲爱的小宝贝，我真的真的最最最最最喜欢你了！</span><br>
+						<span class="say">亲亲小王~ </span><br>
 					</font>
 				</div>
 			</div>
 			<div id="clock-box">
-				<span><font color="#666666">亲爱的，我们相识已经是</font></span>
+				<span><font color="#666666">即使未算上辈子，那小陈也已经守护小王</font></span>
 				<div id="clock"></div>
 			</div>
 			<canvas id="canvas"></canvas>
@@ -65,11 +69,11 @@
 	</div>
 	<script>
     // 配置项
-	var year = 2016;
-    var month = 2;
-    var day = 2;
-    var hour = 5;
-    var minute = 20;
+	var year = 2024;
+    var month = 1;
+    var day = 7;
+    var hour = 22;
+    var minute = 08;
     var second = 00;
     var auto_load = false; // 自动开始动画，方便调试时查看变化，设置成false则点击才开始
     var auto_load_delay = 1000;
